--- a/ComparativeGraderAPI/ComparativeGraderAPI.csproj
+++ b/ComparativeGraderAPI/ComparativeGraderAPI.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200720194856_ImprovedSchema.cs" />
+    <Compile Remove="Migrations\20200720194856_ImprovedSchema.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.0.0" />
     <PackageReference Include="MediatR" Version="8.0.2" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
